# BespokeCard

./: .gitignore  CLAUDE.md  README.md  agents.py  main.py  pyproject.toml
agents_sdk/: sdk_wrapper.py
agents_sdk/llm/: cache_utils.py  cached_litellm.py  cached_llm_helper.py  cached_openai.py  models.py
agents_sdk/openai/: openai_make_ask_agent_tool.py  openai_make_evaluate_tool.py  openai_make_query_tool.py  openai_make_shell_tool.py  openai_sdk.py  openai_sdk_tools.py  openai_token_usage.py
data/: all_queries.sql  job_default.json  orig_queries.sql  row_counts.json  schema.json  unique_vals.json
prompts/: prompt_coder.txt  prompt_planner.txt
synthesized_card_estimators/: interface.py  job.py  job_complex.py
utils/: archiver.py  base_card_estimator.py  db_statistics.py  end_to_end_evaluation.py  metrics.py  model_setup.py  plan_processing.py  plots.py  resource_tracker.py  subplan_generation.py
utils/paper_plots/: error_boxplot_by_tables.py  error_plot.py  q_error_distribution.py  q_error_table_by_tables.py  qo_plot.py  qo_runtimes.py  qo_runtimes_distribution.py  utils.py
utils/paper_plots/plot_agent_runs/: README.md  analyze_run.py  plot_overhead.py  plot_run.py
utils/tools/: ask_agent_tool.py  custom_apply_patch.py  evaluate_tool.py  query_tool.py  shell_tool.py  tools.py  workspace_editor.py
