[project]
name = "bespoke-card"
version = "0.1.0"
description = "Synthesized bespoke cardinality estimator."
requires-python = ">=3.12"
dependencies = [
    "requests==2.32.5",
    "tqdm==4.67.1",
    "python-dotenv==1.2.1",
    "tiktoken==0.12.0",
    "tokenizers==0.22.1",
    "pandas==2.3.3",
    "openai-agents==0.11.1",
    "seaborn==0.13.2",
    "Pympler==1.1",
    "tabulate==0.9.0",
    "duckdb==1.4.3",
    "psycopg2-binary==2.9.12",
    "jinja2>=3.1.6",
    "ipykernel>=7.2.0",
    "black>=26.5.1",
    "numpy>=2.4.6",
]
